--- a/css/style.css
+++ b/css/style.css
@@ -345,7 +345,7 @@ header .menu a{
 .seta-bilocas h2{
     display: inline-block;
     color: #2c3068;
-    margin: 0px 29%;
+    margin: 0px 40%;
     font-weight: bold;
     font-size: 47px;
     cursor: pointer;
@@ -387,7 +387,7 @@ header .menu a{
     padding-left: 97px;
 }
 
-.map p{
+.sessao-form p{
     color: white;
     font-weight: 300;
     max-width: 550px;
@@ -402,20 +402,21 @@ header .menu a{
     font-size: 35px;
 }
 
-.map img{
+.sessao-form img{
     display: block;
     width: 80%;
     margin: 0 auto;
     border-radius: 20px;
 }
 
-.map .legendinha{
+.sessao-form .legendinha{
     color: white;
     font-weight: 200;
     font-size: 15px;
     max-width: 550px;
-    margin: 0px auto;
+    margin: 5px auto;
     text-align: center;
+    line-height: 20px;
 }
 
 footer{
@@ -436,9 +437,10 @@ footer p:nth-of-type(2){
 
 .deepweb{
     width: 100%;
-    height: 500px;
+    height: auto;
     padding: 2%;
     background: linear-gradient(0deg, rgba(25,33,35,1) 66%, rgba(44,48,104,1) 100%);
+    color: rgb(175, 175, 175);
 }
 
 .deepweb .titlesinho{
@@ -452,6 +454,16 @@ footer p:nth-of-type(2){
 
     font-size: 43px;
     font-weight: bold;
+}
+
+.deepweb h4{
+    margin-top: 240px;
+    text-align: center;
+}
+
+.deepweb p{
+    margin: 20px auto;
+    text-align: center;
 }
 
 @media screen and (max-width: 1080px){
